--- a/src/Css/About.css
+++ b/src/Css/About.css
@@ -1,16 +1,30 @@
 .Image {
-	padding-top: 10px;
-	max-width: 250px;
-	max-height: 250px;
+	margin-top: 20px;
+	max-width: 200px;
+	max-height: 200px;
 	border-radius: 50%;
+	border-style: solid;
+	border-width: 3px;
 }
 .About {
-	width: 500px;
+	width: 400px;
 	margin-left: auto;
 	margin-right: auto;
 }
+.Group {
+	display: inline-block;
+}
 
-.Text {
-	padding-top: 10px;
+.Atext {
+	width: fill;
+	border-radius: 5px;
+	color: #33333C;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	padding-top: 15px;
+	padding-bottom: 15px;
+	padding-left: 5px;
+	padding-right: 5px;
+	background-color: lightgrey;
 	font-size: 18px;
 }
