added resume as well as other projects

--- a/src/Css/Contact.css
+++ b/src/Css/Contact.css
@@ -63,7 +63,7 @@ button {
 	padding-left: 70px;
 	font-family: Helvetica-light;
 	color: white;
-	background-color: #52a846;
+	background-color: #d15856;
 	border: none;
 	font-size: 20px;
 }
