--- a/src/Css/Contact.css
+++ b/src/Css/Contact.css
@@ -10,19 +10,20 @@
 	font-size: 18px;
   	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  	
 }
 .Card:hover {
 	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 .Content {
-	display: inline-block;
-
+	margin: auto;
+	max-width: 350px;
 }
 .text {
-	float: left;
 	font-size: 13px;
 	padding-bottom: 4px;
 	padding-top: 10px;
+	float: left;
 }
 input {
 	width: 350px;
@@ -37,7 +38,10 @@ input {
 	border:none;
 	outline: none;
 	margin-bottom: 5px;
+	box-shadow: none;
 }
+
+
 
 textarea {
 	background-color: #445470;
@@ -51,9 +55,11 @@ textarea {
 	padding-right: 6px;
 	padding-top: 5px;
 	padding-bottom: 5px;
-
+	box-shadow: none;	
 	font-size: 13px;
+
 }
+
 
 button {
 	margin-top: 25px;
