--- a/src/Css/Post.css
+++ b/src/Css/Post.css
@@ -1,15 +1,15 @@
 .Post {
-    width: 500px;
+    max-width: 500px;
     height: auto;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 20px;
     padding-right: 20px;
     text-align: left;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
     background-color: #547b8c;
     color: white;
+
     margin-top: 20px;
     margin-bottom: 50px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
